<resources>
    <string name="app_name">KreamClone</string>
    <!-- home menu (bottom navigation) -->
    <string name="menu_home">HOME</string>
    <string name="menu_style">STYLE</string>
    <string name="menu_shop">SHOP</string>
    <string name="menu_watch">WATCH</string>
    <string name="menu_my">MY</string>
    <!-- home -->
    <string name="home_notification">알림</string>
    <!-- item title -->
    <string name="item_title_details">더보기</string>
    <!-- item general product -->
    <string name="item_general_product_quick_delivery">빠른배송</string>
    <string name="item_general_product_immediate_purchase_price">즉시 구매가</string>
    <!-- item brand product -->
    <string name="item_brand_product_purchase_price">구매가</string>
    <string name="item_brand_product_brand_delivery">브랜드배송</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>